--- a/OtoServisSatis.BL/OtoServisSatis.BL.csproj
+++ b/OtoServisSatis.BL/OtoServisSatis.BL.csproj
@@ -5,19 +5,18 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{707226A1-8CC4-44AB-9564-F9E8BB646583}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
-    <RootNamespace>OtoServisSatis.WindowsApp</RootNamespace>
-    <AssemblyName>OtoServisSatis.WindowsApp</AssemblyName>
+    <ProjectGuid>{B9681394-1C85-4DCB-86D1-167D6686EEFE}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>OtoServisSatis.BL</RootNamespace>
+    <AssemblyName>OtoServisSatis.BL</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -27,7 +26,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -49,56 +47,26 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MarkaYonetimi.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="MarkaYonetimi.Designer.cs">
-      <DependentUpon>MarkaYonetimi.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Program.cs" />
+    <Compile Include="MarkaManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="MarkaYonetimi.resx">
-      <DependentUpon>MarkaYonetimi.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <None Include="packages.config" />
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\OtoServisSatis.BL\OtoServisSatis.BL.csproj">
-      <Project>{b9681394-1c85-4dcb-86d1-167d6686eefe}</Project>
-      <Name>OtoServisSatis.BL</Name>
+    <ProjectReference Include="..\OtoServisSatis.DAL\OtoServisSatis.DAL.csproj">
+      <Project>{5eb1d046-15dd-4540-a20f-f5e0b94e1535}</Project>
+      <Name>OtoServisSatis.DAL</Name>
     </ProjectReference>
     <ProjectReference Include="..\OtoServisSatis.Entities\OtoServisSatis.Entities.csproj">
       <Project>{fe507fd6-bca5-4703-b7e5-e7e30f4bc7a2}</Project>
       <Name>OtoServisSatis.Entities</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
