--- a/OtoServisSatis.DAL/OtoServisSatis.DAL.csproj
+++ b/OtoServisSatis.DAL/OtoServisSatis.DAL.csproj
@@ -5,19 +5,18 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{707226A1-8CC4-44AB-9564-F9E8BB646583}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
-    <RootNamespace>OtoServisSatis.WindowsApp</RootNamespace>
-    <AssemblyName>OtoServisSatis.WindowsApp</AssemblyName>
+    <ProjectGuid>{5EB1D046-15DD-4540-A20F-F5E0B94E1535}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>OtoServisSatis.DAL</RootNamespace>
+    <AssemblyName>OtoServisSatis.DAL</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -27,7 +26,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -49,56 +47,32 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MarkaYonetimi.cs">
-      <SubType>Form</SubType>
+    <Compile Include="DatabaseContext.cs" />
+    <Compile Include="Migrations\202208271803522_dbKurulus.cs" />
+    <Compile Include="Migrations\202208271803522_dbKurulus.designer.cs">
+      <DependentUpon>202208271803522_dbKurulus.cs</DependentUpon>
     </Compile>
-    <Compile Include="MarkaYonetimi.Designer.cs">
-      <DependentUpon>MarkaYonetimi.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Program.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="MarkaYonetimi.resx">
-      <DependentUpon>MarkaYonetimi.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <None Include="packages.config" />
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\OtoServisSatis.BL\OtoServisSatis.BL.csproj">
-      <Project>{b9681394-1c85-4dcb-86d1-167d6686eefe}</Project>
-      <Name>OtoServisSatis.BL</Name>
-    </ProjectReference>
     <ProjectReference Include="..\OtoServisSatis.Entities\OtoServisSatis.Entities.csproj">
-      <Project>{fe507fd6-bca5-4703-b7e5-e7e30f4bc7a2}</Project>
+      <Project>{FE507FD6-BCA5-4703-B7E5-E7E30F4BC7A2}</Project>
       <Name>OtoServisSatis.Entities</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202208271803522_dbKurulus.resx">
+      <DependentUpon>202208271803522_dbKurulus.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
