--- a/OtoServisSatis.DAL/App.config
+++ b/OtoServisSatis.DAL/App.config
@@ -1,10 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
         
-        <section name="entityFramework"
-          type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-          requirePermission="false"/>
+        <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
     </configSections>
   <entityFramework>
     <providers>
@@ -12,7 +10,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DatabaseContext" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=OtoServisSatis;Integrated Security=True" 
+    <add name="DatabaseContext" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=OtoServisSatis;Integrated Security=True; MultipleActiveResultSets=True; App=EntityFramework"
          providerName="System.Data.SqlClient"/>
   </connectionStrings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8.1"/></startup></configuration>
