--- a/OtoServisSatis.BL/OtoServisSatis.BL.csproj
+++ b/OtoServisSatis.BL/OtoServisSatis.BL.csproj
@@ -10,11 +10,12 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>OtoServisSatis.BL</RootNamespace>
     <AssemblyName>OtoServisSatis.BL</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -51,8 +52,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AracManager.cs" />
+    <Compile Include="KullaniciManager.cs" />
     <Compile Include="MarkaManager.cs" />
+    <Compile Include="MusteriManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\IRepository.cs" />
+    <Compile Include="Repositories\Repository.cs" />
+    <Compile Include="RoleManager.cs" />
+    <Compile Include="SatisManager.cs" />
+    <Compile Include="ServisManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\OtoServisSatis.DAL\OtoServisSatis.DAL.csproj">
