--- a/OtoServisSatis.WindowsApp/OtoServisSatis.WindowsApp.csproj
+++ b/OtoServisSatis.WindowsApp/OtoServisSatis.WindowsApp.csproj
@@ -9,12 +9,13 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>OtoServisSatis.WindowsApp</RootNamespace>
     <AssemblyName>OtoServisSatis.WindowsApp</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -56,16 +57,79 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnaMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AnaMenu.Designer.cs">
+      <DependentUpon>AnaMenu.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AracYonetimi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AracYonetimi.Designer.cs">
+      <DependentUpon>AracYonetimi.cs</DependentUpon>
+    </Compile>
+    <Compile Include="KullaniciYonetimi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="KullaniciYonetimi.Designer.cs">
+      <DependentUpon>KullaniciYonetimi.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
     <Compile Include="MarkaYonetimi.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MarkaYonetimi.Designer.cs">
       <DependentUpon>MarkaYonetimi.cs</DependentUpon>
     </Compile>
+    <Compile Include="MusteriYonetimi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MusteriYonetimi.Designer.cs">
+      <DependentUpon>MusteriYonetimi.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RolYonetimi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RolYonetimi.Designer.cs">
+      <DependentUpon>RolYonetimi.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SatisYonetimi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SatisYonetimi.Designer.cs">
+      <DependentUpon>SatisYonetimi.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ServisYonetimi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ServisYonetimi.Designer.cs">
+      <DependentUpon>ServisYonetimi.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="AnaMenu.resx">
+      <DependentUpon>AnaMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AracYonetimi.resx">
+      <DependentUpon>AracYonetimi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="KullaniciYonetimi.resx">
+      <DependentUpon>KullaniciYonetimi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MarkaYonetimi.resx">
       <DependentUpon>MarkaYonetimi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MusteriYonetimi.resx">
+      <DependentUpon>MusteriYonetimi.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -75,7 +139,17 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="RolYonetimi.resx">
+      <DependentUpon>RolYonetimi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SatisYonetimi.resx">
+      <DependentUpon>SatisYonetimi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ServisYonetimi.resx">
+      <DependentUpon>ServisYonetimi.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
